--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         <h3 class="footer-text">
-            
+            Made by : Orly & Elle
         </h3>
     </div>
 
