--- a/instructions.html
+++ b/instructions.html
@@ -30,7 +30,7 @@
 
     <div>
         <h3 class="footer-text">
-            
+            Made by : Orly & Elle
         </h3>
     </div>
 </body>
