--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div>
         <h1 class="logo1">
             PHOTOFY
+            <p><small>by: OrLe</small></p>
         </h1>
     </div>
     <div>
