--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 class="logo1">
             PHOTOFY
         </h1>
+        <img src="img/logo.png">
         <p><small>by: OrLe</small></p>
     </div>
     <div>
