--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <link rel="icon" type="image/png" href="img/camera.png">
 <body class="home">  
     <div>
-        <h1 class="logo1">
-            PHOTOFY
-        </h1>
-        <img src="img/logo.png">
+        <img class="logo" src="img/logo.png">
         <p><small>by: OrLe</small></p>
     </div>
     <div>
