--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kreon:wght@300..700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/2.11.0/bundled.js" integrity="sha512-FS3rpwhhjq9Tjt/U+qIrgOIa60xmW+Kr71CSGS5ifKJl/E9DdODyUrtentDS6eRmrfXPRzqq0DhywHd06qpdGw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/camera.png">
+    <script src="log.js"></script>
 <body class="home">  
     <div>
-        <img class="logo" src="img/logo.png">
-        <p><small>by: OrLe</small></p>
+        <h1 class="logo1" onload="fnts()">
+            PHOTOFY
+        </h1>
     </div>
     <div>
         <button id="ready-btn" onclick="redirectWithTransition('instructions.html')">Ready?</button>
     </div>
     <div>
         <h3 class="footer-text">
-            Made by : Orly & Elle
+            
         </h3>
     </div>
 
